--- a/settings.gradle
+++ b/settings.gradle
@@ -8,6 +8,9 @@ rootProject.name = 'spring-boot-mq'
     }
 
     compDir.eachDir { subDir ->
+        if (subDir.name.startsWith("_")) {
+            return;
+        }
         def projectName = ":${it}-${subDir.name}";
         include projectName
         project(projectName).projectDir = subDir
